--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: test-repo
+  name: github
+  repo: generalR/royp-cms
 
 media_folder: static/img
 public_folder: /img
@@ -14,5 +15,10 @@ collections:
       - { label: 'Subtitle', name: 'subtitle', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: Image, name: image, widget: image }
-      - { label: 'Description', name: 'description', widget: 'text' }
+      - {
+          label: 'Description',
+          required: false,
+          name: 'description',
+          widget: 'text',
+        }
       - { name: Body, label: body, widget: markdown }
