--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img
 collections:
   - name: blog
     label: Blog
-    folder: content/blog
+    folder: 'content/blog'
     create: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
